--- a/gasto/src/index.html
+++ b/gasto/src/index.html
@@ -31,6 +31,9 @@
     var showErrorMessage = function(message) {
       toastr.error(message);
     }
+    var showWarningMessage = function(message) {
+      toastr.warning(message);
+    }
    </script>
 </body>
 
