apple-touch-icon

--- a/gasto/src/index.html
+++ b/gasto/src/index.html
@@ -7,6 +7,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="/src/assets/icons/ios/57.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/src/assets/icons/ios/72.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/src/assets/icons/ios/114.png" />
+  <link rel="apple-touch-icon" sizes="256x256" href="/src/assets/icons/ios/256.png" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
